# HTML

./: GEMINI.md  home.html  results.html
backend/: .env.example  .gitignore  Procfile  README.md  cloudbuild.yaml  fix_requirements.py  pyproject.toml  requirements.in  requirements.txt  scratchpad.ipynb  stable-requirements.txt  start.sh
backend/AgentTools/: PLOS.py  Reddit.py  Summarizer.py  agent_tests.py  claude.py  gemini.py  gpt.py
backend/Agents/: generic_agent.py  models.py  patient_agent.py  research_agent.py
backend/Agents/routes/: agent_apis.py
backend/App/: config.py  main.py  models.py  schemas.py
backend/App/crud/: auth.py  email_verification.py  password_reset.py
backend/App/routes/: auth.py
backend/App/services/: email_service.py
backend/App/utils/: auth.py  dependencies.py
backend/CustomTools/: ChatsManager.py  models.py  test_firestore.py
backend/CustomTools/routes/: chats_api.py
backend/Database/: DBManager.py  __init__.py  database.py  main.py  models.py  schemas.py  setup.sql
backend/tests/: import_tests.py  test_agent.py  ui.py
frontend/: .env  README.md  index.html  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ChatInterface.tsx  MarkdownRenderer.tsx  Navigation.tsx  ProtectedRoute.tsx  RoleBasedRedirect.tsx  RoleRestrictedRoute.tsx  UnauthenticatedRoute.tsx
frontend/src/components/auth/: EmailVerificationDialog.tsx  ForgotPasswordDialog.tsx  LoginDialog.tsx  RoleGuard.tsx  SignupDialog.tsx
frontend/src/components/ui/: button.tsx  loading-spinner.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/hooks/: useAuth.ts  useChat.ts
frontend/src/lib/: dateUtils.ts
frontend/src/pages/: About.tsx  ChatPage.tsx  Dashboard.tsx  EmailVerification.tsx  Index.tsx  PatientPortal.tsx  ResearchPortal.tsx  ResetPassword.tsx
frontend/src/services/: chatApi.ts  chatHistoryApi.ts
